fixed background not showing up, cleaned up some of the code, and finished the contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@ html {
 body {
     width: 100%;
     margin: 0;
-    background-image: url("/assets/images/mirrored_squares.png");
+    background-image: url(../images/mirrored_squares.png);
+    background-attachment: fixed;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #777777;
 }
@@ -41,6 +42,7 @@ body {
     align-self: center;
 }
 
+
 .navlink{
     color: #777777;
     text-decoration: none;
@@ -68,6 +70,44 @@ body {
     padding-right: 20px;
     border-width: 150px;
     background-color: #4aaaa5;
+}
+#name2{
+    margin: 10px;
+    text-align: center;
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    width: 730px;
+    
+
+}
+#mail{
+    margin: 10px;
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    width: 725px;
+
+}
+
+#msg{
+    margin-top: 10px;
+    vertical-align: top;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 725px;
+    
+
+    
+
+}
+#button{
+    margin-top:30px ;
+    color: rgb(223, 223, 223);
+    background-color: #4aaaa5;
+    padding: 10px 32px;
+    margin-left: 68px;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 #aboutMe{
